jQueryのホスティング先をgoogleに変更。

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="./css/site_header.css">
   <link rel="stylesheet" href="./css/special_pickup.css">
   
-  <script src="http://sp.res.nimg.jp/js/jquery-1.9.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="./js/common.js" type="text/javascript" charset="utf-8"></script>
   <script src="./js/jquery.showMenu.js" type="text/javascript" charset="utf-8"></script>
   <script src="./js/urchin.js" type="text/javascript" charset="utf-8"></script>
