--- a/public_html/index.html
+++ b/public_html/index.html
@@ -32,6 +32,22 @@
   <script src="./js/bookmarkbubble_move.js" type="text/javascript" charset="utf-8"></script>
   <script src="./js/nicoapi.js" type="text/javascript" charset="utf-8"></script>
 
+  <script src="./js/jsCache.js" type="text/javascript" charset="utf-8"></script>
+  <script type="text/javascript">
+      jsCache.domReady(function() {
+                jsCache.load(
+                    {
+                        url : "img/thum/thumb012.jpg",
+                        append : $("#img_thum_thumb012")[0],
+                        attr : {
+                            width : "70",
+                            border : "0"
+                        }
+                    }
+                );
+              });
+  </script>
+
 </head>
 <body class="hdNoFixed">
   <header role="banner" class="header global" id="jsSiteHeader">
@@ -128,7 +144,7 @@
       <tr>
         <td class="bnrBr"></td>
         <td class="contents2Img">
-          <img src="./img/thum/thumb012.jpg" width="70" border="0" />
+            <span id="img_thum_thumb012"></span>
         </td>
         <td class="contents2TxtBlue2">
           <p class="contents5Time">08:30～00:00&nbsp;</p>
