img/index/icon_2.pngキャッシュ化(ただし、cssから参照されてる部分がキャッシュ化できてないので意味ないかも)

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -72,6 +72,33 @@
                         border : "0"
                     }
                 });
+                jsCache.load({
+                    url : "img/index/icon_2.png",
+                    append : $("#img_index_icon_2_1")[0],
+                    attr : {
+                        width : "14",
+                        height : "10",
+                        border : "0"
+                    }
+                });
+                jsCache.load({
+                    url : "img/index/icon_2.png",
+                    append : $("#img_index_icon_2_2")[0],
+                    attr : {
+                        width : "14",
+                        height : "10",
+                        border : "0"
+                    }
+                });
+                jsCache.load({
+                    url : "img/index/icon_2.png",
+                    append : $("#img_index_icon_2_3")[0],
+                    attr : {
+                        width : "14",
+                        height : "10",
+                        border : "0"
+                    }
+                });
               });
   </script>
 
@@ -179,7 +206,7 @@
           <p class="contents5Txt">ＮＹ大幅続落！日銀横にらみの東京市場は？　NIKKEI Channel＜Markets＞</p>
           <p class="iconimg">
             <span id="img_index_icon_4_1"></span>&nbsp;<span class="icontxt">1,337</span>&nbsp;&nbsp;&nbsp;
-            <img src="./img/index/icon_2.png" width="14" height="10" border="0" />&nbsp;<span class="icontxt">5,042</span>
+            <span id="img_index_icon_2_1"></span>&nbsp;<span class="icontxt">5,042</span>
           </p>
         </td>
         <td class="bnrBr"></td>
@@ -199,7 +226,7 @@
           <p class="contents5Txt">原発の高経年化技術評価等に係る審査会合</p>
           <p class="iconimg">
             <span id="img_index_icon_4_2"></span>&nbsp;<span class="icontxt">923</span>&nbsp;&nbsp;&nbsp;
-            <img src="./img/index/icon_2.png" width="14" height="10" border="0" />&nbsp;<span class="icontxt">101</span>
+            <span id="img_index_icon_2_2"></span>&nbsp;<span class="icontxt">101</span>
           </p>
         </td>
         <td class="bnrBr"></td>
@@ -219,7 +246,7 @@
           <p class="contents5Txt">【参議院 国会生中継】決算委員会</p>
           <p class="iconimg">
             <span id="img_index_icon_4_3"></span>&nbsp;<span class="icontxt">34,650</span>&nbsp;&nbsp;&nbsp;
-            <img src="./img/index/icon_2.png" width="14" height="10" border="0" />&nbsp;<span class="icontxt">6,715</span>
+            <span id="img_index_icon_2_3"></span>&nbsp;<span class="icontxt">6,715</span>
           </p>
         </td>
         <td class="bnrBr"></td>
