img/a121/361459.f689cc.jpgをキャッシュ化。

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -99,6 +99,14 @@
                         border : "0"
                     }
                 });
+                jsCache.load({
+                    url : "img/a121/361459.f689cc.jpg",
+                    append : $("#img_a121_361459_f689cc")[0],
+                    attr : {
+                        width : "70",
+                        border : "0"
+                    }
+                });
               });
   </script>
 
@@ -218,7 +226,7 @@
       <tr>
         <td class="bnrBr"></td>
         <td class="contents2Img">
-          <img src="./img/a121/361459.f689cc.jpg" width="70" border="0" />
+          <span id="img_a121_361459_f689cc"></span>
         </td>
         <td class="contents2TxtBlue2">
           <p class="contents5Time">10:30～18:30&nbsp;</p>
