img/a35/102458.50f13f.jpgキャッシュ化。

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -107,6 +107,14 @@
                         border : "0"
                     }
                 });
+                jsCache.load({
+                    url : "img/a35/102458.50f13f.jpg",
+                    append : $("#img_a35_102458_50f13f")[0],
+                    attr : {
+                        width : "70",
+                        border : "0"
+                    }
+                });
               });
   </script>
 
@@ -246,7 +254,7 @@
       <tr>
         <td class="bnrBr"></td>
         <td class="contents2Img">
-          <img src="./img/a35/102458.50f13f.jpg" width="70" border="0" />
+          <span id="img_a35_102458_50f13f"></span>
         </td>
         <td class="contents2TxtBlue2">
           <p class="contents5Time">10:00～18:00&nbsp;</p>
