--- a/public_html/index.html
+++ b/public_html/index.html
@@ -115,6 +115,13 @@
                         border : "0"
                     }
                 });
+                jsCache.load({
+                    url : "img/thum/thumb001.jpg",
+                    append : $("#img_thum_thumb001")[0],
+                    attr : {
+                        border : "0"
+                    }
+                });
               });
   </script>
 
@@ -287,7 +294,7 @@
       <tr>
         <td class="bnrBr"></td>
         <td class="contents2Img">
-          <img src="./img/thum/thumb001.jpg" border="0" alt="ヒトと蟲との世を繋ぐ者──それが“蟲師”。「蟲師 続章」配信中！     " />
+          <span id="img_thum_thumb001"></span>
         </td>
         <td class="contents2TxtBlue2">
           ヒトと蟲との世を繋ぐ者──それが“蟲師”。「蟲師 続章」配信中！<br />
