img/uploader/pickupselection/0407.pngをキャッシュ化。

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -122,6 +122,13 @@
                         border : "0"
                     }
                 });
+                jsCache.load({
+                    url : "img/uploader/pickupselection/0407.png",
+                    append : $("#img_uploader_pickupselection_0407")[0],
+                    attr : {
+                        border : "0"
+                    }
+                });
               });
   </script>
 
@@ -308,7 +315,7 @@
       <tr>
         <td class="bnrBr"></td>
         <td class="contents2Img">
-          <img src="./img/uploader/pickupselection/0407.png" border="0" alt="【超会議３】きのこの山とたけのこの里を判別？！作ってみた大集合！【開催まであと19日】      " />
+          <span id="img_uploader_pickupselection_0407"></span>
         </td>
         <td class="contents2TxtBlue2">
           【超会議３】きのこの山とたけのこの里を判別？！作ってみた大集合！【開催まであと19日】<br />
