--- a/public_html/index.html
+++ b/public_html/index.html
@@ -129,6 +129,13 @@
                         border : "0"
                     }
                 });
+                jsCache.load({
+                    url : "img/thum/thumb002.jpg",
+                    append : $("#img_thum_thumb002")[0],
+                    attr : {
+                        border : "0"
+                    }
+                });
               });
   </script>
 
@@ -329,7 +336,7 @@
       <tr>
         <td class="bnrBr"></td>
         <td class="contents2Img">
-          <img src="./img/thum/thumb002.jpg" border="0" alt="2014年春アニメ『棺姫のチャイカ』が期間限定1巻無料！      " />
+          <span id="img_thum_thumb002"></span>
         </td>
         <td class="contents2TxtBlue2">
           2014年春アニメ『棺姫のチャイカ』が期間限定1巻無料！<br />
