spanのsrcでURLを指定するように変更。

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,7 +39,7 @@
                 // 回避策として、loadを複数回呼び出すようにする。
                 jsCache.load({
                     url : "img/thum/thumb012.jpg",
-                    append : $(".img_thum_thumb012"),
+                    append : $("span[src='img/thum/thumb012.jpg']"),
                     attr : {
                         width : "70",
                         border : "0"
@@ -47,7 +47,7 @@
                 });
                 jsCache.load({
                     url : "img/index/icon_4.png",
-                    append : $(".img_index_icon_4"),
+                    append : $("span[src='img/index/icon_4.png']"),
                     attr : {
                         width : "7",
                         height : "10",
@@ -56,7 +56,7 @@
                 });
                 jsCache.load({
                     url : "img/index/icon_2.png",
-                    append : $(".img_index_icon_2"),
+                    append : $("span[src='img/index/icon_2.png']"),
                     attr : {
                         width : "14",
                         height : "10",
@@ -65,7 +65,7 @@
                 });
                 jsCache.load({
                     url : "img/a121/361459.f689cc.jpg",
-                    append : $(".img_a121_361459_f689cc"),
+                    append : $("span[src='img/a121/361459.f689cc.jpg']"),
                     attr : {
                         width : "70",
                         border : "0"
@@ -73,7 +73,7 @@
                 });
                 jsCache.load({
                     url : "img/a35/102458.50f13f.jpg",
-                    append : $(".img_a35_102458_50f13f"),
+                    append : $("span[src='img/a35/102458.50f13f.jpg']"),
                     attr : {
                         width : "70",
                         border : "0"
@@ -81,21 +81,21 @@
                 });
                 jsCache.load({
                     url : "img/thum/thumb001.jpg",
-                    append : $(".img_thum_thumb001"),
+                    append : $("span[src='img/thum/thumb001.jpg']"),
                     attr : {
                         border : "0"
                     }
                 });
                 jsCache.load({
                     url : "img/uploader/pickupselection/0407.png",
-                    append : $(".img_uploader_pickupselection_0407"),
+                    append : $("span[src='img/uploader/pickupselection/0407.png']"),
                     attr : {
                         border : "0"
                     }
                 });
                 jsCache.load({
                     url : "img/thum/thumb002.jpg",
-                    append : $(".img_thum_thumb002"),
+                    append : $("span[src='img/thum/thumb002.jpg']"),
                     attr : {
                         border : "0"
                     }
@@ -199,15 +199,15 @@
       <tr>
         <td class="bnrBr"></td>
         <td class="contents2Img">
-            <span class="img_thum_thumb012"></span>
+            <span src="img/thum/thumb012.jpg"></span>
         </td>
         <td class="contents2TxtBlue2">
           <p class="contents5Time">08:30～00:00&nbsp;</p>
           <p class="nowonair">NOW ON AIR!!</p>
           <p class="contents5Txt">ＮＹ大幅続落！日銀横にらみの東京市場は？　NIKKEI Channel＜Markets＞</p>
           <p class="iconimg">
-            <span class="img_index_icon_4"></span>&nbsp;<span class="icontxt">1,337</span>&nbsp;&nbsp;&nbsp;
-            <span class="img_index_icon_2"></span>&nbsp;<span class="icontxt">5,042</span>
+            <span src="img/index/icon_4.png"></span>&nbsp;<span class="icontxt">1,337</span>&nbsp;&nbsp;&nbsp;
+            <span src="img/index/icon_2.png"></span>&nbsp;<span class="icontxt">5,042</span>
           </p>
         </td>
         <td class="bnrBr"></td>
@@ -219,15 +219,15 @@
       <tr>
         <td class="bnrBr"></td>
         <td class="contents2Img">
-          <span class="img_a121_361459_f689cc"></span>
+          <span src="img/a121/361459.f689cc.jpg"></span>
         </td>
         <td class="contents2TxtBlue2">
           <p class="contents5Time">10:30～18:30&nbsp;</p>
           <p class="nowonair">NOW ON AIR!!</p>
           <p class="contents5Txt">原発の高経年化技術評価等に係る審査会合</p>
           <p class="iconimg">
-            <span class="img_index_icon_4"></span>&nbsp;<span class="icontxt">923</span>&nbsp;&nbsp;&nbsp;
-            <span class="img_index_icon_2"></span>&nbsp;<span class="icontxt">101</span>
+            <span src="img/index/icon_4.png"></span>&nbsp;<span class="icontxt">923</span>&nbsp;&nbsp;&nbsp;
+            <span src="img/index/icon_2.png"></span>&nbsp;<span class="icontxt">101</span>
           </p>
         </td>
         <td class="bnrBr"></td>
@@ -239,15 +239,15 @@
       <tr>
         <td class="bnrBr"></td>
         <td class="contents2Img">
-          <span class="img_a35_102458_50f13f"></span>
+          <span src="img/a35/102458.50f13f.jpg"></span>
         </td>
         <td class="contents2TxtBlue2">
           <p class="contents5Time">10:00～18:00&nbsp;</p>
           <p class="nowonair">NOW ON AIR!!</p>
           <p class="contents5Txt">【参議院 国会生中継】決算委員会</p>
           <p class="iconimg">
-            <span class="img_index_icon_4"></span>&nbsp;<span class="icontxt">34,650</span>&nbsp;&nbsp;&nbsp;
-            <span class="img_index_icon_2"></span>&nbsp;<span class="icontxt">6,715</span>
+            <span src="img/index/icon_4.png"></span>&nbsp;<span class="icontxt">34,650</span>&nbsp;&nbsp;&nbsp;
+            <span src="img/index/icon_2.png"></span>&nbsp;<span class="icontxt">6,715</span>
           </p>
         </td>
         <td class="bnrBr"></td>
@@ -272,7 +272,7 @@
       <tr>
         <td class="bnrBr"></td>
         <td class="contents2Img">
-          <span class="img_thum_thumb001"></span>
+          <span src="img/thum/thumb001.jpg"></span>
         </td>
         <td class="contents2TxtBlue2">
           ヒトと蟲との世を繋ぐ者──それが“蟲師”。「蟲師 続章」配信中！<br />
@@ -286,7 +286,7 @@
       <tr>
         <td class="bnrBr"></td>
         <td class="contents2Img">
-          <span class="img_uploader_pickupselection_0407"></span>
+          <span src="img/uploader/pickupselection/0407.png"></span>
         </td>
         <td class="contents2TxtBlue2">
           【超会議３】きのこの山とたけのこの里を判別？！作ってみた大集合！【開催まであと19日】<br />
@@ -300,7 +300,7 @@
       <tr>
         <td class="bnrBr"></td>
         <td class="contents2Img">
-          <span class="img_thum_thumb002"></span>
+          <span src="img/thum/thumb002.jpg"></span>
         </td>
         <td class="contents2TxtBlue2">
           2014年春アニメ『棺姫のチャイカ』が期間限定1巻無料！<br />
