imgタグをspanに置き換え。

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -92,7 +92,100 @@
                   {
                         border : "0"
                   });
-              });
+              cache_load(
+                  "img/smile/23261200.jpg",
+                  {
+                  });
+              cache_load(
+                  "img/smile/23270118.jpg",
+                  {
+                  });
+              cache_load(
+                  "img/smile/23154338.jpg",
+                  {
+                  });
+              cache_load(
+                  "img/smile/23254661.jpg",
+                  {
+                  });
+              cache_load(
+                  "img/smile/23266767.jpg",
+                  {
+                  });
+              cache_load(
+                  "img/smile/23259485.jpg",
+                  {
+                  });
+              cache_load(
+                  "img/smile/23249476.jpg",
+                  {
+                  });
+              cache_load(
+                  "img/smile/23268290.jpg",
+                  {
+                  });
+              cache_load(
+                  "img/smile/23245819.jpg",
+                  {
+                  });
+              cache_load(
+                  "img/thum/ad.jpg",
+                  {
+                  });
+              cache_load(
+                  "img/smile/23230612.jpg",
+                  {
+                  });
+              cache_load(
+                  "img/smile/22960446.jpg",
+                  {
+                  });
+              cache_load(
+                  "img/smile/15751190.jpg",
+                  {
+                  });
+              cache_load(
+                  "img/thum/thumb024.jpg",
+                  {
+                        width : "100",
+                        height : "100",
+                        border : "0"
+                  });
+              cache_load(
+                  "img/thum/thumb025.jpg",
+                  {
+                        width : "100",
+                        height : "100",
+                        border : "0"
+                  });
+              cache_load(
+                  "img/thum/thumb023.jpg",
+                  {
+                        width : "100",
+                        height : "100",
+                        border : "0"
+                  });
+              cache_load(
+                  "img/bookmark/browsingicon.png",
+                  {
+                        width : "20",
+                        border : "0"
+                  });
+              cache_load(
+                  "img/common/snsbtn_twitter.png",
+                  {
+                        width : "140",
+                        height : "41",
+                        border : "0"
+                  });
+              cache_load(
+                  "img/common/snsbtn_facebook.png",
+                  {
+                        width : "140",
+                        height : "41",
+                        border : "0"
+                  });
+            });
   </script>
 
 </head>
@@ -309,7 +402,7 @@
       <a href="http://sp.nicovideo.jp/watch/sm23261200?cp_in=wt_tp_rk" class="itemBlk">
         <div class="itemBlkInner">
           <div class="itemMedia video">
-            <img src="./img/smile/23261200.jpg" alt="" />
+            <span src="img/smile/23261200.jpg"></span>
             <span class="relateInfo">36:35</span>
           </div>
           <div class="itemInfo">
@@ -329,7 +422,7 @@
       <a href="http://sp.nicovideo.jp/watch/sm23270118?cp_in=wt_tp_rk" class="itemBlk">
         <div class="itemBlkInner">
           <div class="itemMedia video">
-            <img src="./img/smile/23270118.jpg" alt="" />
+            <span src="img/smile/23270118.jpg"></span>
             <span class="relateInfo">3:46</span>
           </div>
           <div class="itemInfo">
@@ -349,7 +442,7 @@
       <a href="http://sp.nicovideo.jp/watch/sm23154338?cp_in=wt_tp_rk" class="itemBlk">
         <div class="itemBlkInner">
           <div class="itemMedia video">
-            <img src="./img/smile/23154338.jpg" alt="" />
+            <span src="img/smile/23154338.jpg" />
             <span class="relateInfo">2:15</span>
           </div>
           <div class="itemInfo">
@@ -369,7 +462,7 @@
       <a href="http://sp.nicovideo.jp/watch/sm23254661?cp_in=wt_tp_rk" class="itemBlk">
         <div class="itemBlkInner">
           <div class="itemMedia video">
-            <img src="./img/smile/23254661.jpg" alt="" />
+            <span src="img/smile/23254661.jpg"></span>
             <span class="relateInfo">1:58</span>
           </div>
           <div class="itemInfo">
@@ -389,7 +482,7 @@
       <a href="http://sp.nicovideo.jp/watch/sm23266767?cp_in=wt_tp_rk" class="itemBlk">
         <div class="itemBlkInner">
           <div class="itemMedia video">
-            <img src="./img/smile/23266767.jpg" alt="" />
+            <span src="img/smile/23266767.jpg"></span>
             <span class="relateInfo">22:38</span>
           </div>
           <div class="itemInfo">
@@ -409,7 +502,7 @@
       <a href="http://sp.nicovideo.jp/watch/sm23259485?cp_in=wt_tp_rk" class="itemBlk">
         <div class="itemBlkInner">
           <div class="itemMedia video">
-            <img src="./img/smile/23259485.jpg" alt="" />
+            <span src="img/smile/23259485.jpg"></span>
             <span class="relateInfo">3:26</span>
           </div>
           <div class="itemInfo">
@@ -429,7 +522,7 @@
       <a href="http://sp.nicovideo.jp/watch/sm23249476?cp_in=wt_tp_rk" class="itemBlk">
         <div class="itemBlkInner">
           <div class="itemMedia video">
-            <img src="./img/smile/23249476.jpg" alt="" />
+            <span src="img/smile/23249476.jpg"></span>
             <span class="relateInfo">1:31</span>
           </div>
           <div class="itemInfo">
@@ -449,7 +542,7 @@
       <a href="http://sp.nicovideo.jp/watch/sm23268290?cp_in=wt_tp_rk" class="itemBlk">
         <div class="itemBlkInner">
           <div class="itemMedia video">
-            <img src="./img/smile/23268290.jpg" alt="" />
+            <span src="img/smile/23268290.jpg"></span>
             <span class="relateInfo">4:43</span>
           </div>
           <div class="itemInfo">
@@ -469,7 +562,7 @@
       <a href="http://sp.nicovideo.jp/watch/1396515246?cp_in=wt_tp_rk" class="itemBlk">
         <div class="itemBlkInner">
           <div class="itemMedia video">
-            <img src="./img/smile/23245819.jpg" alt="" />
+            <span src="img/smile/23245819.jpg"></span>
             <span class="relateInfo">0:15</span>
           </div>
           <div class="itemInfo">
@@ -535,7 +628,7 @@
 </section>
 
 <div id="middleBanner" class="middleBanner">
-  <img src="./img/thum/ad.jpg" title="広告的ななにか" alt="広告的ななにか">
+  <span src="img/thum/ad.jpg"></span>
 </div>
 
 <section>
@@ -654,7 +747,7 @@
   <a href="http://sp.nicovideo.jp/watch/sm23230612" class="itemBlk">
     <div class="itemBlkInner">
       <div class="itemMedia video">
-        <img src="./img/smile/23230612.jpg" alt="" />
+        <span src="img/smile/23230612.jpg"></span>
         <span class="relateInfo">3:48</span>
       </div>
       <div class="itemInfo">
@@ -671,7 +764,7 @@
   <a href="http://sp.nicovideo.jp/watch/sm22960446" class="itemBlk">
     <div class="itemBlkInner">
       <div class="itemMedia video">
-        <img src="./img/smile/22960446.jpg" alt="" />
+        <span src="img/smile/22960446.jpg"></span>
         <span class="relateInfo">3:58</span>
       </div>
       <div class="itemInfo">
@@ -688,7 +781,7 @@
   <a href="http://sp.nicovideo.jp/watch/sm15751190" class="itemBlk">
     <div class="itemBlkInner">
       <div class="itemMedia video">
-        <img src="./img/smile/15751190.jpg" alt="" />
+        <span src="img/smile/15751190.jpg"></span>
         <span class="relateInfo">3:54</span>
       </div>
       <div class="itemInfo">
@@ -713,7 +806,7 @@
     <li>
       <a href="http://sp.ch.nicovideo.jp/channel/ch2585610?cp_in=ch_tp_anime">
         <div>
-          <img src="./img/thum/thumb024.jpg" width="100" height="100" border="0" />
+          <span src="img/thum/thumb024.jpg"></span>
           <p>咲-Saki-全国編</p>
         </div>
       </a>
@@ -721,7 +814,7 @@
     <li>
       <a href="http://sp.ch.nicovideo.jp/channel/ch2590206?cp_in=ch_tp_anime">
         <div>
-          <img src="./img/thum/thumb025.jpg" width="100" height="100" border="0" />
+          <span src="img/thum/thumb025.jpg"></span>
           <p>蟲師 続章</p>
         </div>
       </a>
@@ -729,7 +822,7 @@
     <li>
       <a href="http://sp.ch.nicovideo.jp/channel/ch2585705?cp_in=ch_tp_anime">
         <div>
-          <img src="./img/thum/thumb023.jpg" width="100" height="100" border="0" />
+          <span src="img/thum/thumb023.jpg"></span>
           <p>ハマトラ</p>
         </div>
       </a>
@@ -837,7 +930,7 @@
     <div class="bookmarkBubbleAppleTouchImage"></div>
     <p><b>ニコニコへ<br>すぐアクセス！</b></p>
     <p id="jsBookmarkBubble1" style="clear:both;margin-left:10px; display:none;">
-      画面下部の<img src="./img/bookmark/browsingicon.png" width="20" border="0">ボタンから<br>
+    画面下部の<span src="img/bookmark/browsingicon.png"></span>ボタンから<br>
       <b>ホーム画面に追加</b>しよう！
     </p>
     <p id="jsBookmarkBubble2" style="clear:both;margin-left:10px; display:none;">
@@ -849,19 +942,19 @@
 </div>
 
 <div class="sp_ad_f" id="sp_footer_ad">
-  <img src="./img/thum/ad.jpg" title="広告的ななにか" alt="広告的ななにか">
+  <span src="img/thum/ad.jpg"></span>
 </div>
     
   
 <div class="SocialBtn">
   <div class="SocialBtnImg">
     <a href="https://twitter.com/nico_nico_info">
-      <img src="./img/common/snsbtn_twitter.png" width="140" height="41" border="0" />
+      <span src="img/common/snsbtn_twitter.png"></span>
     </a>
   </div>
   <div class="SocialBtnImg">
     <a href="http://www.facebook.com/niconico.official">
-      <img src="./img/common/snsbtn_facebook.png" width="140" height="41" border="0" />
+      <span src="img/common/snsbtn_facebook.png"></span>
     </a>
   </div>
 </div>
