インデント修正。

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -77,73 +77,22 @@
                         width : "70",
                         border : "0"
                   });
-              cache_load(
-                  "img/thum/thumb001.jpg",
-                  {
-                        border : "0"
-                  });
-              cache_load(
-                  "img/uploader/pickupselection/0407.png",
-                  {
-                        border : "0"
-                  });
-              cache_load(
-                  "img/thum/thumb002.jpg",
-                  {
-                        border : "0"
-                  });
-              cache_load(
-                  "img/smile/23261200.jpg",
-                  {
-                  });
-              cache_load(
-                  "img/smile/23270118.jpg",
-                  {
-                  });
-              cache_load(
-                  "img/smile/23154338.jpg",
-                  {
-                  });
-              cache_load(
-                  "img/smile/23254661.jpg",
-                  {
-                  });
-              cache_load(
-                  "img/smile/23266767.jpg",
-                  {
-                  });
-              cache_load(
-                  "img/smile/23259485.jpg",
-                  {
-                  });
-              cache_load(
-                  "img/smile/23249476.jpg",
-                  {
-                  });
-              cache_load(
-                  "img/smile/23268290.jpg",
-                  {
-                  });
-              cache_load(
-                  "img/smile/23245819.jpg",
-                  {
-                  });
-              cache_load(
-                  "img/thum/ad.jpg",
-                  {
-                  });
-              cache_load(
-                  "img/smile/23230612.jpg",
-                  {
-                  });
-              cache_load(
-                  "img/smile/22960446.jpg",
-                  {
-                  });
-              cache_load(
-                  "img/smile/15751190.jpg",
-                  {
-                  });
+              cache_load("img/thum/thumb001.jpg", {border : "0"});
+              cache_load("img/uploader/pickupselection/0407.png", {border : "0"});
+              cache_load("img/thum/thumb002.jpg", {border : "0"});
+              cache_load("img/smile/23261200.jpg", {});
+              cache_load("img/smile/23270118.jpg", {});
+              cache_load("img/smile/23154338.jpg", {});
+              cache_load("img/smile/23254661.jpg", {});
+              cache_load("img/smile/23266767.jpg", {});
+              cache_load("img/smile/23259485.jpg", {});
+              cache_load("img/smile/23249476.jpg", {});
+              cache_load("img/smile/23268290.jpg", {});
+              cache_load("img/smile/23245819.jpg", {});
+              cache_load("img/thum/ad.jpg", {});
+              cache_load("img/smile/23230612.jpg", {});
+              cache_load("img/smile/22960446.jpg", {});
+              cache_load("img/smile/15751190.jpg", {});
               cache_load(
                   "img/thum/thumb024.jpg",
                   {
