--- a/public_html/index.html
+++ b/public_html/index.html
@@ -734,7 +734,6 @@
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 <script src="./js/common.js" type="text/javascript" charset="utf-8"></script>
-<script src="./js/jquery.showMenu.js" type="text/javascript" charset="utf-8"></script>
 <script src="./js/urchin.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
 if (document.location.protocol == "http:") {
@@ -744,6 +743,8 @@ if (document.location.protocol == "http:") {
 <script src="./js/nicoapi.js" type="text/javascript" charset="utf-8"></script>
 <script src="./js/jsCache.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
+    (function(e){e.fn.toggleClass=function(t){var n=e.extend({_container:".header",_trigger:".hdButton",_content:".hdContent"},t);e(n._container).each(function(){e(n._trigger).bind("click", function(){var t=e(n._trigger).index(this);var r=e(n._content).eq(t);if(r.hasClass("active")||e(this).hasClass("selected")){e(this).removeClass("selected");r.removeClass("active")}else{e(n._content).removeClass("active");e(n._trigger).removeClass("selected");e(this).addClass("selected");r.addClass("active")}})});return this}})(jQuery);$(function(){$(".header").toggleClass()})
+
     jsCache.domReady(function() {
             function cache_load(url, attr) {
             // XXX:loadに複数の要素渡してappendすると、追加先が正しくならない。jsCacheのバグっぽい。
