--- a/public_html/index.html
+++ b/public_html/index.html
@@ -477,26 +477,26 @@
   </a>
 </section>
 
-<section>
+<section class="category">
   <h1 class="headline">カテゴリから探す</h1>
   <ul class="column2">
     <li class="left">
-      <a href="http://sp.nicovideo.jp/tag/g_ent2?cp_in=tg_tp_category"><p class="ent">エンタメ・音楽</p></a>
+      <a href="http://sp.nicovideo.jp/tag/g_ent2?cp_in=tg_tp_category"><p class="ent"><img src="img/category/g_ent2.png">エンタメ・音楽</p></a>
     </li>
     <li>
-      <a href="http://sp.nicovideo.jp/tag/g_life2?cp_in=tg_tp_category"><p class="life">生活・一般・スポ</p></a>
+      <a href="http://sp.nicovideo.jp/tag/g_life2?cp_in=tg_tp_category"><p class="life"><img src="img/category/g_life2.png">生活・一般・スポ</p></a>
     </li>
     <li class="left">
-      <a href="http://sp.nicovideo.jp/tag/g_politics?cp_in=tg_tp_category"><p class="politics">政治</p></a>
+      <a href="http://sp.nicovideo.jp/tag/g_politics?cp_in=tg_tp_category"><p class="politics"><img src="img/category/g_politics.png">政治</p></a>
     </li>
     <li>
-      <a href="http://sp.nicovideo.jp/tag/g_tech?cp_in=tg_tp_category"><p class="tech">科学・技術</p></a>
+      <a href="http://sp.nicovideo.jp/tag/g_tech?cp_in=tg_tp_category"><p class="tech"><img src="img/category/g_tech.png">科学・技術</p></a>
     </li>
     <li class="left">
-      <a href="http://sp.nicovideo.jp/tag/g_culture2?cp_in=tg_tp_category"><p class="culture">アニメ・ゲーム・絵</p></a>
+      <a href="http://sp.nicovideo.jp/tag/g_culture2?cp_in=tg_tp_category"><p class="culture"><img src="img/category/g_culture2.png">アニメ・ゲーム・絵</p></a>
     </li>
     <li>
-      <a href="http://sp.nicovideo.jp/tag/g_other?cp_in=tg_tp_category"><p class="other">その他</p></a>
+      <a href="http://sp.nicovideo.jp/tag/g_other?cp_in=tg_tp_category"><p class="other"><img src="img/category/all.png">その他</p></a>
     </li>
   </ul>
 </section>
