--- a/public_html/index.html
+++ b/public_html/index.html
@@ -732,110 +732,113 @@
 <input type="hidden" id="jsOperatingSystem" value="iOS" />
 <input type="hidden" id="jsDevice" value="iPhone" />
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="./js/common.js" type="text/javascript" charset="utf-8"></script>
 <script src="./js/jsCache.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript">
-    (function(e){e.fn.toggleClass=function(t){var n=e.extend({_container:".header",_trigger:".hdButton",_content:".hdContent"},t);e(n._container).each(function(){e(n._trigger).bind("click", function(){var t=e(n._trigger).index(this);var r=e(n._content).eq(t);if(r.hasClass("active")||e(this).hasClass("selected")){e(this).removeClass("selected");r.removeClass("active")}else{e(n._content).removeClass("active");e(n._trigger).removeClass("selected");e(this).addClass("selected");r.addClass("active")}})});return this}})(jQuery);$(function(){$(".header").toggleClass()})
-
     jsCache.domReady(function() {
-            function cache_load(url, attr) {
-            // XXX:loadに複数の要素渡してappendすると、追加先が正しくならない。jsCacheのバグっぽい。
-            // 回避策として、loadを複数回呼び出すようにする。
-            jsCache.load({
-                url : url,
-                append : $("span[src='" + url + "']"),
-                attr : attr
-            });
-            }
+            jsCache.load({url : "http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"})
+            .then(function() {
+                jsCache.load({url : "./js/common.js"});
 
-            cache_load(
-                "img/sample.jpg",
-                {
-                    class : "img-responsive"
-                });
-            cache_load(
-                "img/sample2.jpg",
-                {
-                    class : "img-responsive"
-                });
-            cache_load(
-                "img/sample3.jpg",
-                {
-                    class : "img-responsive"
-                });
-            cache_load(
-                "img/index/icon_4.png",
-                {
-                    width : "7",
-                    height : "10",
-                    border : "0"
-                });
-            cache_load(
-                "img/index/icon_2.png",
-                {
-                    width : "14",
-                    height : "10",
-                    border : "0"
-                });
-            cache_load("img/thum/thumb001.jpg", {border : "0"});
-            cache_load("img/uploader/pickupselection/0407.png", {border : "0"});
-            cache_load("img/thum/thumb002.jpg", {border : "0"});
-            cache_load("img/smile/23261200.jpg", {});
-            cache_load("img/smile/23270118.jpg", {});
-            cache_load("img/smile/23154338.jpg", {});
-            cache_load("img/smile/23254661.jpg", {});
-            cache_load("img/smile/23266767.jpg", {});
-            cache_load("img/smile/23259485.jpg", {});
-            cache_load("img/smile/23249476.jpg", {});
-            cache_load("img/smile/23268290.jpg", {});
-            cache_load("img/smile/23245819.jpg", {});
-            cache_load("img/thum/ad.jpg", {});
-            cache_load("img/thum/ad2.jpg", {});
-            cache_load("img/smile/23230612.jpg", {});
-            cache_load("img/smile/22960446.jpg", {});
-            cache_load("img/smile/15751190.jpg", {});
-            cache_load(
-                "img/thum/thumb024.jpg",
-                {
-                    width : "100",
-                    height : "100",
-                    border : "0"
-                });
-            cache_load(
-                "img/thum/thumb025.jpg",
-                {
-                    width : "100",
-                    height : "100",
-                    border : "0"
-                });
-            cache_load(
-                "img/thum/thumb023.jpg",
-                {
-                    width : "100",
-                    height : "100",
-                    border : "0"
-                });
-            cache_load(
-                "img/common/snsbtn_twitter.png",
-                {
-                    width : "140",
-                    height : "41",
-                    border : "0"
-                });
-            cache_load(
-                "img/common/snsbtn_facebook.png",
-                {
-                    width : "140",
-                    height : "41",
-                    border : "0"
-                });
-            cache_load("img/category/g_ent2.png", {});
-            cache_load("img/category/g_life2.png", {});
-            cache_load("img/category/g_politics.png", {});
-            cache_load("img/category/g_tech.png", {});
-            cache_load("img/category/g_culture2.png", {});
-            cache_load("img/category/all.png", {});
+                (function(e){e.fn.toggleClass=function(t){var n=e.extend({_container:".header",_trigger:".hdButton",_content:".hdContent"},t);e(n._container).each(function(){e(n._trigger).bind("click", function(){var t=e(n._trigger).index(this);var r=e(n._content).eq(t);if(r.hasClass("active")||e(this).hasClass("selected")){e(this).removeClass("selected");r.removeClass("active")}else{e(n._content).removeClass("active");e(n._trigger).removeClass("selected");e(this).addClass("selected");r.addClass("active")}})});return this}})(jQuery);$(function(){$(".header").toggleClass()});
+
+                function cache_load(url, attr) {
+                    // XXX:loadに複数の要素渡してappendすると、追加先が正しくならない。jsCacheのバグっぽい。
+                    // 回避策として、loadを複数回呼び出すようにする。
+                    jsCache.load({
+                        url : url,
+                        append : $("span[src='" + url + "']"),
+                        attr : attr
+                    });
+                }
+
+                cache_load(
+                    "img/sample.jpg",
+                    {
+                        class : "img-responsive"
+                    });
+                cache_load(
+                    "img/sample2.jpg",
+                    {
+                        class : "img-responsive"
+                    });
+                cache_load(
+                    "img/sample3.jpg",
+                    {
+                        class : "img-responsive"
+                    });
+                cache_load(
+                    "img/index/icon_4.png",
+                    {
+                        width : "7",
+                        height : "10",
+                        border : "0"
+                    });
+                cache_load(
+                    "img/index/icon_2.png",
+                    {
+                        width : "14",
+                        height : "10",
+                        border : "0"
+                    });
+                cache_load("img/thum/thumb001.jpg", {border : "0"});
+                cache_load("img/uploader/pickupselection/0407.png", {border : "0"});
+                cache_load("img/thum/thumb002.jpg", {border : "0"});
+                cache_load("img/smile/23261200.jpg", {});
+                cache_load("img/smile/23270118.jpg", {});
+                cache_load("img/smile/23154338.jpg", {});
+                cache_load("img/smile/23254661.jpg", {});
+                cache_load("img/smile/23266767.jpg", {});
+                cache_load("img/smile/23259485.jpg", {});
+                cache_load("img/smile/23249476.jpg", {});
+                cache_load("img/smile/23268290.jpg", {});
+                cache_load("img/smile/23245819.jpg", {});
+                cache_load("img/thum/ad.jpg", {});
+                cache_load("img/thum/ad2.jpg", {});
+                cache_load("img/smile/23230612.jpg", {});
+                cache_load("img/smile/22960446.jpg", {});
+                cache_load("img/smile/15751190.jpg", {});
+                cache_load(
+                    "img/thum/thumb024.jpg",
+                    {
+                        width : "100",
+                        height : "100",
+                        border : "0"
+                    });
+                cache_load(
+                    "img/thum/thumb025.jpg",
+                    {
+                        width : "100",
+                        height : "100",
+                        border : "0"
+                    });
+                cache_load(
+                    "img/thum/thumb023.jpg",
+                    {
+                        width : "100",
+                        height : "100",
+                        border : "0"
+                    });
+                cache_load(
+                    "img/common/snsbtn_twitter.png",
+                    {
+                        width : "140",
+                        height : "41",
+                        border : "0"
+                    });
+                cache_load(
+                    "img/common/snsbtn_facebook.png",
+                    {
+                        width : "140",
+                        height : "41",
+                        border : "0"
+                    });
+                cache_load("img/category/g_ent2.png", {});
+                cache_load("img/category/g_life2.png", {});
+                cache_load("img/category/g_politics.png", {});
+                cache_load("img/category/g_tech.png", {});
+                cache_load("img/category/g_culture2.png", {});
+                cache_load("img/category/all.png", {});
+            });
         });
 </script>
 
